Customize the location of the Ivy cache [skip ci]